Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-107254

Crash when assigning non existing properties

    XMLWordPrintable

Details

    • Android, iOS/tvOS/watchOS, WebAssembly
    • 54afc9b12c (qt/qtdeclarative/dev) 54afc9b12c (qt/tqtc-qtdeclarative/dev) ceba8d7fc6 (qt/tqtc-qtdeclarative/6.2) a67c6aef5d (qt/qtdeclarative/6.4) a67c6aef5d (qt/tqtc-qtdeclarative/6.4) a67c6aef5d (qt/qtdeclarative/6.4.1)

    Description

      Running the attached (faulty) example and pressing the "Add" button crashes on each platform I tested on - except Linux. On Linux you see

      <Unknown File>: undefined
      <Unknown File>: false
      <Unknown File>: false

      when pressing "Add" some times. Which in turn isn't very helpful, though.

      Android/iOS/Wasm crash silently, making it hard to find the real cause of the error.

      Attachments

        For Gerrit Dashboard: QTBUG-107254
        # Subject Branch Project Status CR V

        Activity

          People

            ulherman Ulf Hermann
            cajus Cajus Pollmeier
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes