QQmlComponent: Don't crash on unknown properties

Fixes: QTBUG-107254
Change-Id: Ic3b3ceff50583eb22224a56fc594863d28eee9fd
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>
Reviewed-by: Sami Shalayel <sami.shalayel@qt.io>
Reviewed-by: Semih Yavuz <semih.yavuz@qt.io>
(cherry picked from commit 54afc9b12cea4be2b3d9eae91b22383460469534)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>